--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -3,16 +3,21 @@ layout: default
 ---
 
 <div class="page-header">
-<h1><a href="{{ page.url }}">Event Quest: {{ page.title | default: page.jp_title }}</a></h1>
+<h1><a href="{{ page.url }}">
+{% if page.no_limited_quest %}Campaign{% else %}Event Quest{% endif %}:
+{{ page.title | default: page.jp_title }}</a></h1>
 </div>
 
 <table class="event-infobox">
 <tr><th colspan="2">{{ page.title | default: page.jp_title }}</th></tr>
+<tr><td colspan="2"><img width="600" height="191" style="width: 100%" src="/cdn/Sprite/{{ page.banner_image }}" loading="lazy"></td></tr>
 <tr><th colspan="2">Duration</th></tr>
 {% if page.gacha %}
 <tr><th>Gacha</th><td data-expiry="{{ page.event_end_time }}">{{ page.event_start_time | date: site.date_format }} to {{ page.event_end_time | date: site.date_format }}</td></tr>
 {% endif %}
+{% if page.no_limited_quest != true %}
 <tr><th>Main Quests</th><td data-expiry="{{ page.event_end_time }}">{{ page.event_start_time | date: site.date_format }} to {{ page.event_end_time | date: site.date_format }}</td></tr>
+{% endif %}
 {% if page.farm_end_time %}
 <tr><th>Free Quests</th><td data-expiry="{{ page.farm_end_time }}">{{ page.farm_start_time | date: site.date_format }} to {{ page.farm_end_time | date: site.date_format }}</td></tr>
 {% endif %}
