Migrate icons to /cdn

--- a/_includes/card-sidekick.html
+++ b/_includes/card-sidekick.html
@@ -3,6 +3,6 @@
 <li data-id="{{ c.stockId }}" data-rarity="{{ c.rarity }}" data-name="{{ page.title }}">
 <div class="sidekick-icon sidekick-{{ c.rarity }}">
   <div class="chara-border sidekick-border-{{ c.rarity }}"></div>
-  <img class="sidekick-chara-icon" src="/assets/img/icon/icon_{{ c.resourceName }}_s01.png" loading="lazy">
+  <img class="sidekick-chara-icon" src="/cdn/Sprite/icon_{{ c.resourceName }}_s01.png" loading="lazy">
 </div>
 <a href="{{ page.url }}#s{{ c.stockId }}">{{ page.title }}</a></li>
