--- a/_includes/status-icon.html
+++ b/_includes/status-icon.html
@@ -1,1 +1,1 @@
-{% assign id = include.id | downcase %}{% assign status = site.data.StatusMaster[id] %}{% assign icon = site.data.wiki.StatusIcons[id] %}<span class="status" title="{{ status.statusName }}"><img src="/assets/img/icon/{{ icon }}.png" height="13px"></span>
+{% assign id = include.id | downcase %}{% assign status = site.data.StatusMaster[id] %}{% assign icon = site.data.wiki.StatusIcons[id] %}<span class="status" title="{{ status.statusName }}"><img src="/cdn/Sprite/{{ icon }}.png" height="13px"></span>
