Sidekick skill list in one page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,6 +53,9 @@
           <li>
             <a href="/voice_actors/">Voice Actors</a>
           </li>
+          <li>
+            <a href="/misc/">More...</a>
+          </li>
         </ul>
         <h3 class="section__header">Basic Information</h3>
         <ul>
