--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -79,7 +79,7 @@
 {% endfor %}
 {% endunless %}
 {% endfor %}
-<h2>Stats</h2>
+<h2 id="h{{ include.stockId }}-stats">Stats</h2>
     
 <div class="hero3">
     <table>
