--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -72,7 +72,7 @@
 {% endfor %}
 {% endunless %}
 {% endfor %}
-<h2>Stats</h2>
+<h2 id="s{{ include.stockId }}-stats">Stats</h2>
 
 <table>
     <tr>
