--- a/_includes/skill-effect-target.html
+++ b/_includes/skill-effect-target.html
@@ -10,7 +10,7 @@ all allies
 {% when 4 %}
 all enemies
 {% when 5 %}
-???(used in an event skill)
+event bonus unit
 {% else %}
 Unknown target ({{ include.target }})
 {% endcase %}
