--- a/_includes/card-hero.html
+++ b/_includes/card-hero.html
@@ -1,7 +1,7 @@
 {% assign c = include.card %}
 {% assign page = c.resourceName | resourceNameToPage %}
 <li data-id="{{ c.stockId }}" data-rarity="{{ c.rarity }}" data-element="{{ c.element }}" data-name="{{ page.title }}">
-<div class="hero-icon">
+<div class="hero-icon {{ include.class }}">
   <div class="chara-border hero-{{ c.rarity }}"></div>
   <img class="hero-chara-icon" src="/cdn/Sprite/icon_{{ c.resourceName }}_h01.png" loading="lazy">
 </div>
