--- a/assets/main.scss
+++ b/assets/main.scss
@@ -432,6 +432,9 @@ $elementName: fire, water, earth, light, shadow;
     background-image: url(/cdn/Sprite/ui_frame_h_base_#{$name}.png);
   }
 }
+.hero-1, .hero-2 {
+  background-image: url(/cdn/Sprite/ui_frame_h_00.png);
+}
 .hero-3 {
   background-image: url(/cdn/Sprite/ui_frame_h_01.png);
 }
@@ -454,6 +457,10 @@ $elementName: fire, water, earth, light, shadow;
   bottom: 0;
   clip-path: polygon(0% 10%, 50% 0%, 95% 10%, 95% 73%, 50% 95%, 0% 73%);
 }
+.sidekick-border-1, .sidekick-border-2 {
+  width: 124px;
+  background-image: url(/cdn/Sprite/ui_frame_s_00.png);
+}
 .sidekick-border-3 {
   width: 124px;
   background-image: url(/cdn/Sprite/ui_frame_s_01.png);
@@ -461,6 +468,9 @@ $elementName: fire, water, earth, light, shadow;
 .sidekick-border-4 {
   width: 124px;
   background-image: url(/cdn/Sprite/ui_frame_s_02.png);
+}
+.sidekick-1, .sidekick-2 {
+  background-image: url(/cdn/Sprite/ui_frame_s_base_00.png);
 }
 .sidekick-3 {
   background-image: url(/cdn/Sprite/ui_frame_s_base_01.png);
