--- a/_includes/item-icon.html
+++ b/_includes/item-icon.html
@@ -1,4 +1,15 @@
 {%- assign id = include.id | downcase -%}
-{%- if id == "199911" -%}{%- assign id = "219991" -%}{%- endif -%}
+{%- assign rewardType = include.rewardType | default: 3 %}
+{%- if rewardType == 3 %}
 {%- assign item = site.data.ItemMaster[id] -%}
 <span class="item" title="{{ item.description }}"><img src="/cdn/Sprite/item_{{ item.resourceName }}.png" loading="lazy"></span>
+{%- else %}
+{%- if rewardType == 1 %}
+{%- assign card = site.data.CardMaster[id] %}
+{%- assign r = card.resourceName | append: "_h01" %}
+{%- else if rewardType == 2 %}
+{%- assign card = site.data.SidekickMaster[id] %}
+{%- assign r = card.resourceName | append: "_s01" %}
+{%- endif %}
+<span class="item"><img src="/cdn/Sprite/icon_{{ r }}.png" loading="lazy"></span>
+{%- endif %}
