--- a/_includes/quest-infobox.html
+++ b/_includes/quest-infobox.html
@@ -14,6 +14,15 @@
 <tr><th>Required Quest</th><td><a href="#q{{ pqid }}">{{ site.data.QuestMaster[pqid].questName }}</a></td></tr>
 {% when "ItemConsume" %}
 {% assign item_cost = item_cost | push: cond %}
+{% when "HavingStockCard" %}
+<tr><th>Card</th><td><ul>
+{% for id in cond.stockIds %}
+{% assign page = id | modulo: 10000 | divided_by: 10 | characterIdToPage %}
+{% assign cardId = id | times: 10 | plus: 1 | downcase %}
+{% assign resourceName = site.data.SidekickMaster[cardId].resourceName %}
+<li>Any form of <a class="item" href="{{ page.url }}"><img src="/cdn/Sprite/icon_{{ resourceName }}_s01.png" loading="lazy"> {{ page.title }}</a></li>
+{% endfor %}
+</ul></td></tr>
 {% else %}
 <tr><td>Unknown condition ({{ cond.class }})</td></tr>
 {% endcase %}
