FAQ + Valent SQ TL

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,10 @@
           </li>
           <li>
             <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/">Open source</a>
-          </li>    
+          </li>
+          <li>
+            <a href="/faq/">FAQ</a>
+          </li>
         </ul>
         <h3 class="section__header">Catalogs</h3>
         <ul>
