--- a/_includes/skill-timing.html
+++ b/_includes/skill-timing.html
@@ -7,7 +7,9 @@ when appearing
 action start
 {% when 3 %}
 action end
-{% comment %}4, 5 , 6 (no skills with such timing){% endcomment %}
+{% comment %}4, 5 (no skills with such timing){% endcomment %}
+{% when 6 %}
+when self at &lt;50% HP
 {% when 7 %}
 after own attack puts enemy at &lt;50% HP
 {% when 8 %}
