New guide page WIP

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,7 +72,7 @@
             <a href="/guide/quest/">Quest</a>
           </li>
           <li>
-            <a href="/guide/battle">Battle</a>
+            <a href="/guide/battle/">Battle</a>
           </li>
           <li>
             <a href="/guide/hero/">Hero</a>
@@ -87,7 +87,10 @@
             <a href="/guide/sale/">Sale</a>
           </li>
           <li>
-            <a href="/guide/training">Training</a>
+            <a href="/guide/training/">Training</a>
+          </li>
+          <li>
+            <a href="/guide/parallel_weapon/">Parallel Weapon Remodelling</a>
           </li>
           <li>
             <a href="/guide/gacha/">Gacha</a>
@@ -96,7 +99,7 @@
             <a href="/guide/shop/">Shop</a>
           </li>
           <li>
-            <a href="/guide/login_bonus">Login Bonus</a>
+            <a href="/guide/login_bonus/">Login Bonus</a>
           </li>
           <li>
             <a href="/guide/mission/">Mission</a>
