Update wiki nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,6 +39,9 @@
         <h3 class="section__header">Catalogs</h3>
         <ul>
           <li>
+            <a href="/events/">Events</a>
+          </li>
+          <li>
             <a href="/charas/#heroes">Heroes</a>
           </li>
           <li>
