New guide page for auto

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -96,6 +96,9 @@
             <a href="/guide/parallel_weapon/">Parallel Weapon Remodelling</a>
           </li>
           <li>
+            <a href="/guide/technique_scroll/">Technique Scroll</a>
+          </li>
+          <li>
             <a href="/guide/gacha/">Gacha</a>
           </li>
           <li>
