oh well, no funny name

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -96,7 +96,7 @@
             <a href="/guide/parallel_weapon/">Parallel Weapon Remodelling</a>
           </li>
           <li>
-            <a href="/guide/technique_scroll/">Technique Scroll</a>
+            <a href="/guide/skill_book/">Skill Book</a>
           </li>
           <li>
             <a href="/guide/gacha/">Gacha</a>
