last rename for today...

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -96,7 +96,7 @@
             <a href="/guide/parallel_weapon/">Parallel Weapon Remodelling</a>
           </li>
           <li>
-            <a href="/guide/skill_book/">Skill Book</a>
+            <a href="/guide/skill_manual/">Skill Manual</a>
           </li>
           <li>
             <a href="/guide/gacha/">Gacha</a>
