Add affiliations list

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,6 +54,9 @@
             <a href="/mobs/">Mobs and Enemies</a>
           </li>
           <li>
+            <a href="/affiliations/">Affiliations</a>
+          </li>
+          <li>
             <a href="/illustrators/">Illustrators</a>
           </li>
           <li>
