Improve chara link

--- a/_includes/item.html
+++ b/_includes/item.html
@@ -4,13 +4,5 @@
 {%- assign item = site.data.ItemMaster[id] -%}
 <span class="item" title="{{ item.description }}"><img src="/cdn/Sprite/item_{{ item.resourceName }}.png" loading="lazy"> {{ item.itemName }}</span>
 {%- else %}
-{%- if rewardType == 1 %}
-{%- assign card = site.data.CardMaster[id] %}
-{%- assign r = card.resourceName | append: "_h01" %}
-{%- else if rewardType == 2 %}
-{%- assign card = site.data.SidekickMaster[id] %}
-{%- assign r = card.resourceName | append: "_s01" %}
-{%- endif %}
-{%- assign page = card.characterId | characterIdToPage %}
-<span class="item"><img src="/cdn/Sprite/icon_{{ r }}.png" loading="lazy"> {{ page.title }}</span>
+{{ id | divided_by: 10 | stockIdToLink: rewardType }}
 {%- endif %}
