One more [ci skip]

--- a/_includes/quest-infobox.html
+++ b/_includes/quest-infobox.html
@@ -17,10 +17,7 @@
 {% when "HavingStockCard" %}
 <tr><th>Card</th><td><ul>
 {% for id in cond.stockIds %}
-{% assign page = id | modulo: 10000 | divided_by: 10 | characterIdToPage %}
-{% assign cardId = id | times: 10 | plus: 1 | downcase %}
-{% assign resourceName = site.data.SidekickMaster[cardId].resourceName %}
-<li>Any form of <a class="item" href="{{ page.url }}"><img src="/cdn/Sprite/icon_{{ resourceName }}_s01.png" loading="lazy"> {{ page.title }}</a></li>
+<li>Any form of {{ id | stockIdToLink: 2 }}</li>
 {% break %}{% comment %}Only use the first stockId, since they are usually refer to the same chara anyway{% endcomment %}
 {% endfor %}
 </ul></td></tr>
