Move enemy simulator to its own page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,22 +72,37 @@
             <a href="/guide/">Getting Started</a>
           </li>
           <li>
-            <a href="/guide/user_rank/">Stamina and User Rank</a>
-          </li>
-          <li>
-            <a href="/guide/quest/">Quest</a>
-          </li>
-          <li>
-            <a href="/guide/battle/">Battle</a>
-          </li>
-          <li>
             <a href="/guide/hero/">Hero</a>
           </li>
           <li>
             <a href="/guide/sidekick/">Sidekick</a>
           </li>
           <li>
+            <a href="/guide/gacha/">Gacha</a>
+          </li>
+          <li>
+            <a href="/guide/user_rank/">Stamina and User Rank</a>
+          </li>
+          <li>
+            <a href="/guide/battle/">Battle</a>
+          </li>
+          <li>
+            <a href="/guide/quest/">Quest</a>
+          </li>
+          <li>
             <a href="/guide/quest_scenario/">Quest Scenario</a>
+          </li>
+          <li>
+            <a href="/guide/enemy_simulator/">Enemy Simulator</a>
+          </li>
+          <li>
+            <a href="/guide/shop/">Shop</a>
+          </li>
+          <li>
+            <a href="/guide/login_bonus/">Login Bonus</a>
+          </li>
+          <li>
+            <a href="/guide/mission/">Mission</a>
           </li>
           <li>
             <a href="/guide/sale/">Sale</a>
@@ -100,18 +115,6 @@
           </li>
           <li>
             <a href="/guide/skill_manual/">Skill Manual</a>
-          </li>
-          <li>
-            <a href="/guide/gacha/">Gacha</a>
-          </li>
-          <li>
-            <a href="/guide/shop/">Shop</a>
-          </li>
-          <li>
-            <a href="/guide/login_bonus/">Login Bonus</a>
-          </li>
-          <li>
-            <a href="/guide/mission/">Mission</a>
           </li>
         </ul>
         <h3 class="section__header">Tools</h3>
