--- a/_includes/header.html
+++ b/_includes/header.html
@@ -93,7 +93,7 @@
             <a href="/guide/quest_scenario/">Quest Scenario</a>
           </li>
           <li>
-            <a href="/guide/enemy_simulator/">Enemy Simulator</a>
+            <a href="/guide/challenge_simulator/">Challenge Simulator</a>
           </li>
           <li>
             <a href="/guide/shop/">Shop</a>
