--- a/_includes/skill-timing.html
+++ b/_includes/skill-timing.html
@@ -23,6 +23,8 @@ permanent effect
 battle win
 {% when 12 %}
 AI choose target
+{% when 13 %}
+after using non-attacking skill
 {% else %}
 unknown timing ({{ include.timing }})
 {% endcase %}
