Monkey patching passive skill ids
I hate you LW

--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -128,4 +128,10 @@
 <h2>Skills</h2>
 
 {% include skill-table.html skillIds=skillIds %}
+
+{% if include.passiveSkillIds %}
+<h3>Passive skills</h3>
+{% assign passiveSkillIds = include.passiveSkillIds | split: "," %}
+{% include skill-table.html skillIds=passiveSkillIds hide_banner=true %}
+{% endif %}
 </div>
