--- a/_includes/skill-table.html
+++ b/_includes/skill-table.html
@@ -1,13 +1,15 @@
+{% unless include.hide_banner == true %}
 <p>Hover over the effect description to see original japanese description. Please help report any bug related to skill effect <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/issues/7">here</a>.</p>
 
 <p>Want to help in translating skill names? Please see <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/issues/26">here</a>.</p>
+{% endunless %}
 
 <table>
     <tr>
         <th>Skill Name</th><th>Effect/Proc rate</th><th>View cost</th>
     </tr>
     {% for id in include.skillIds %}
-    {% capture sid %}{{ id }}{% endcapture %}
+    {% assign sid = id | downcase %}
     {% assign skill = site.data.SkillMaster[sid] %}
     {% assign skillName = site.data.wiki.SkillNameTranslation[id] %}
     <tr>
